--- a/plugins/python-build/share/python-build/3.3.5
+++ b/plugins/python-build/share/python-build/3.3.5
@@ -1,4 +1,5 @@
 require_cc
+install_package "openssl-1.0.1g" "https://www.openssl.org/source/openssl-1.0.1g.tar.gz#de62b43dfcd858e66a74bee1c834e959" mac_openssl --if has_broken_mac_openssl
 install_package "readline-6.2" "http://ftpmirror.gnu.org/readline/readline-6.2.tar.gz#67948acb2ca081f23359d0256e9a271c" standard --if has_broken_mac_readline
 install_package "Python-3.3.5" "http://python.org/ftp/python/3.3.5/Python-3.3.5.tgz#803a75927f8f241ca78633890c798021" ldflags_dirs standard verify_py33
 install_package "setuptools-3.4.3" "https://pypi.python.org/packages/source/s/setuptools/setuptools-3.4.3.tar.gz#284bf84819c0f6735c853619d1a54955" python
